Change to configureation file

--- a/django/acme_services/ACMEservices.cfg
+++ b/django/acme_services/ACMEservices.cfg
@@ -29,14 +29,16 @@ esgf_user_table = esgf_security.permission
 [esg_ini_options]
 
 #prefix for thredds data root
-prefix = /Users/8xo/data/acme/projects
+#prefix = /Users/8xo/data/acme/projects
+prefix = /acme/data/projects
 
 #esg.ini location
-esgini_location = /Users/8xo/software/exploratory_analysis/ESGF-ACMEservices/django/acme_services/esg.ini
+#esgini_location = /Users/8xo/software/exploratory_analysis/ESGF-ACMEservices/django/acme_services/esg.ini
+esgini_location = /esg/config/esgcet/esg.ini
 
 #secondary esg.ini location
-esgini_location2 = /Users/8xo/software/exploratory_analysis/ESGF-ACMEservices/django/acme_services/esg2.ini
-
+#esgini_location2 = /Users/8xo/software/exploratory_analysis/ESGF-ACMEservices/django/acme_services/esg2.ini
+esgini_location2 = /esg/config/esgcet/esg.ini
 
 
 [paths]
