More changes to publishign service

--- a/django/acme_services/ACMEservices.cfg
+++ b/django/acme_services/ACMEservices.cfg
@@ -40,6 +40,9 @@ esgini_location2 = /Users/8xo/software/exploratory_analysis/ESGF-ACMEservices/dj
 
 
 [paths]
+acme_root = '/data/acme/ea'
+esgf_root = '/data/acme/projects'
+       
 
 [data]
 
