--- a/django-app-1.8/esgf_acmeservices/esg2.ini
+++ b/django-app-1.8/esgf_acmeservices/esg2.ini
@@ -17,7 +17,7 @@ experiment_options =
 data_type_options = a,h,dd,h1,climo,h0
 realm_options = atm,ice,lnd,ocn,all,ATM,lndice
 regridding_options = bilinear,downscaled,native,fv257x512
-range_options = all
+range_options = all,10-19
 versionnum_options = v0_1,v01,HIGHRES,pre-v0
 directory_format = /data/acme/projects/%(project)s/%(data_type)s/%(experiment)s/%(versionnum)s/%(realm)s/%(regridding)s/%(range)s
 dataset_id = %(project)s.%(data_type)s.%(experiment)s.%(versionnum)s.%(realm)s.%(regridding)s.%(range)s
