Committing some changes to the views and README files
(Still need to add a gitignore)

--- a/django-app-1.8/esgf_acmeservices/ACMEservices.cfg
+++ b/django-app-1.8/esgf_acmeservices/ACMEservices.cfg
@@ -4,6 +4,8 @@
 [loggers]
 publication_log_file = publication.log
 publication_logger_level = INFO
+db_log_file = db.log
+db_logger_level = INFO
 
 
 #####
