--- a/django-app-1.8/esgf_acmeservices/esg2.ini
+++ b/django-app-1.8/esgf_acmeservices/esg2.ini
@@ -11,11 +11,11 @@ category_defaults =
 	data_type | climo
 	regridding | bilinear
 	realm | atm
-experiment_options = 
-	ACME | B1850C5_ne30gx1_tuning | experiment ne30
+experiment_options = ACME | B1850C5_ne30gx1_tuning | experiment ne30
+	ACME | B1851C5e1_ne30 | experiment ne30 C7
 	ACME | B1850C5e1_ne30 | experiment ne30 C5
 data_type_options = a,h,dd,h1,climo,h0
-realm_options = atm,ice,lnd,ocn,all,ATM,lndice
+realm_options = lndice,all,atm,ocn,ATM,None,ice,lnd
 regridding_options = bilinear,downscaled,native,fv257x512
 range_options = all,10-19
 versionnum_options = v0_1,v01,HIGHRES,pre-v0
